# robotics-homeworks

hw1/: E2A.m  E2A.m~  FK.m  FK_mid.m  IK.m  IK.m~  IK_mid.m  RTmatrices.m  RTmatrices.m~  ZXZ.m  symbolic.m  symbolic.m~  test.m  test.m~  test_for_mid  test_for_mid.m
hw2/: do_not_read_me.txt
hw2/my_robot/: CMakeLists.txt  model.xml  package.xml
hw2/my_robot/launch/: display.launch
hw2/my_robot/mesh/: base.3ds  lamp.blend  lamphead.3ds  link1.3ds  link2.3ds
hw2/my_robot/src/: state_publisher.cpp
hw2/my_robot/urdf/: my_robot.urdf  visual.gv
hw3/: DK.m  DK.m~  FANUC.m  FANUC.m~  FK.m  RT.m  RTmatrices.m~
hw4/: Arm2.m  Arm2.m~  RT.m  RTmatrices.m  RTmatrices.m~
rekek/: Dynamics.m  Trajectory.m
